// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader19 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ kHrZKX"
      />
    </div>
  </div>
</div>
`;

exports[`Loader19 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ eEUmGd"
      />
    </div>
  </div>
</div>
`;

exports[`Loader19 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ bKNwAR"
      />
    </div>
  </div>
</div>
`;
